--- a/_laravel5/public/app/index.html
+++ b/_laravel5/public/app/index.html
@@ -1,4 +1,4 @@
-<html ng-app="englishApp">
+<html>
     <head>
         <title>English</title>
 
@@ -9,10 +9,13 @@
         <script src="../assets/vendor/angular-aria/angular-aria.js"></script> 
         <script src="../assets/vendor/angular-animate/angular-animate.js"></script> 
         <script src="../assets/vendor/angular-material/angular-material.js"></script>
+        <script src="../assets/vendor/angular-messages/angular-messages.min.js"></script>
+        <script src="../assets/vendor/ngstorage/ngStorage.min.js"></script>
 
         <script src="/app/app.js"></script>
         <script src="/app/appRout.js"></script>
-        <script src="/app/controller.js"></script>
+        <script src="/app/services/dictionary.js"></script>
+        <script src="/app/modules/add/controllers/add.js"></script>
 
         <link href='../assets/vendor/angular-material/angular-material.css' rel='stylesheet' type='text/css'>
 
@@ -38,7 +41,7 @@
         </style>
 
     </head>
-    <body>
+    <body ng-app="englishApp">
         <div class="header" layout="row" layout-align="start center">
             <div ui-sref="add" >
                 <md-button class="md-fab md-primary md-mini" aria-label="Create Dictionary">
