--- a/_laravel5/public/app/index.html
+++ b/_laravel5/public/app/index.html
@@ -15,7 +15,9 @@
         <script src="/app/app.js"></script>
         <script src="/app/appRout.js"></script>
         <script src="/app/services/dictionary.js"></script>
+        <script src="/app/services/wordPlay.js"></script>
         <script src="/app/modules/add/controllers/add.js"></script>
+        <script src="/app/modules/lesson/controllers/lesson.js"></script>
 
         <link href='../assets/vendor/angular-material/angular-material.css' rel='stylesheet' type='text/css'>
 
